--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>Digital Resume</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -76,8 +76,8 @@
           <span style="font-size: 3vh;"><a href="mailto:nayalneel@gmail.com" target="_blank">nayalneel@gmail.com</a></span><br>
           <span style="font-size: 3.5vh;">
             <a href="https://github.com/nilesh95"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;
-            <a href="https://in.linkedin.com/pub/himanshu-kumar/96/641/578"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;
-            <a href="https://facebook.com/iamhkrocking"><i class="fa fa-facebook"></i></a>&nbsp;&nbsp;&nbsp;
+            <a href="https://in.linkedin.com/in/nilesh-nayal-2a4983b1"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;
+            <a href="https://facebook.com/nilesh.nayal"><i class="fa fa-facebook"></i></a>&nbsp;&nbsp;&nbsp;
             <a href="#"><i class="fa fa-google"></i></a>&nbsp;&nbsp;&nbsp;
           </span>
         </div>
@@ -93,14 +93,14 @@
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 <hr class="featurette-divider">
-<div align="center">
+<div align="center" id="test2">
   <i class="fa fa-graduation-cap fa-3x" align="center"><h2>Education Qualification</h2></i>
 </div>
 <hr class="featurette-divider">
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
-      <div class="row" id="test2">
+      <div class="row" >
         <div class="col-lg-4">
           <img class="img-circle" src="kps.png" alt="Generic placeholder image" width="240" height="240">
           <h2>Krishna Public School</h2>
@@ -131,11 +131,11 @@
 
 
       <hr class="featurette-divider">
-<div align="center">
+<div align="center" id="test3">
   <i class="fa fa-briefcase fa-3x" align="center"><h2>Work Experience</h2></i>
 </div>
 <hr class="featurette-divider">
-      <div class="row featurette" id="test3">
+      <div class="row featurette" >
         <div class="col-md-7">
           <h2 class="featurette-heading">Trainee at CETPA infotech </h2>
           <p class="lead">CETPA INFOTECH PVT LTD is the leader in the “specialized training” brands of India certified by ISO 9001:2008 for its optimum quality. CETPA INFOTECH is the largest training service provider in various engineering domains for all Engineering students as well as for the working professionals. It has an extensive experience of nurturing over 20000+ students in the past few years.</p>
@@ -157,28 +157,24 @@
         </div>
       </div>
 <hr class="featurette-divider">
-<div align="center">
+<div align="center" id="test4">
   <i class="fa fa-certificate fa-3x" align="center"><h2>Certificate</h2></i>
 </div>
 <hr class="featurette-divider">
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
-      <div class="row" id="test4">
+      <div class="row" >
         <div class="col-lg-3">
           <img class="img-square" src="mca.png" alt="Generic placeholder image" width="240" height="240">
           <h2>TrinityX: T002x Mobile Computing with App Inventor - CS Principles</h2>
-          <p>Secondary Education</p>
-           <p>
-            GPA-9.4</p>
+          <p>Mobile computing is an emerging field that focuses on mobile devices, such as tablets and smart phones. In this course we will use the mobile programming language, App Inventor for Android, to program our Android tablets and smart phones. You will learn how to design and build mobile apps -- apps that are aware of their location, apps that send and receive text messages, apps that give advice and directions. The only limit on the types of apps you will learn to build is your own imagination. So, in this course you will learn  coding  or  computer programming.</p>
          <!-- <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-3">
           <img class="img-square" src="html.png" alt="Generic placeholder image" width="240" height="240">
           <h2>HTML5 Part 1: HTML5 Coding Essentials and Best Practices </h2>
-          <p>Higher Secondary Education</p>
-           <p>
-            Percentage-87%</p>
+          <p>HTML5 is the specification that defines the 5th major revision of the core language of the World Wide Web: the Hypertext Markup Language (HTML). HTML5 will help you create great Web sites, in a simplified but powerful way.</p>
          
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-3">
@@ -209,11 +205,11 @@
       </div>-->
 
       <hr class="featurette-divider">
-     <div align="center">
+     <div align="center" id="test5">
   <i class="fa fa-bookmark fa-3x" align="center"><h2>Hobbies</h2></i>
 </div>
 <hr class="featurette-divider">
- <div class="row text-center" id="test5">
+ <div class="row text-center" >
       <div class="col-sm-2 col-xs-6">
         <i class="fa fa-gamepad fa-5x"></i>
       </br></br>
@@ -241,12 +237,12 @@
 </div>
       <!-- /END THE FEATURETTES -->
  <hr class="featurette-divider">
- <div align="center">
+ <div align="center" id="test6">
   <i class="fa fa-paper-plane fa-3x" align="center"><h2>Project And Achievement</h2></i>
 </div>
 <hr class="featurette-divider">
 <section id="landing">
-  <div class="container" id="test6">
+  <div class="container" >
     <div class="row margin-lg no-margin-bottom">
       <div class="col-lg-4 col-md-4 col-sm-6 visible-lg visible-md visible-sm"> <img src="mfone.png" class="img-responsive" alt="website template image"  /></div>
       <div class="landing-content col-lg-8 col-md-8 col-sm-6 col-xs-12">
@@ -284,11 +280,11 @@
   </div>
 </section>
  <hr class="featurette-divider">
- <div align="center">
+ <div align="center" id="test7">
   <i class="fa fa-pie-chart fa-3x" align="center"><h2>Skills</h2></i>
 </div>
 <hr class="featurette-divider">
- <div class="container marketing" id="test7">
+ <div class="container marketing" >
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
@@ -339,8 +335,8 @@
       <footer>
         <p class="pull-right"> <span style="font-size: 3.5vh;">
             <a href="https://github.com/nilesh95"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;
-            <a href="https://in.linkedin.com/pub/himanshu-kumar/96/641/578"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;
-            <a href="https://facebook.com/iamhkrocking"><i class="fa fa-facebook"></i></a>&nbsp;&nbsp;&nbsp;
+            <a href="https://in.linkedin.com/in/nilesh-nayal-2a4983b1"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp;&nbsp;
+            <a href="https://facebook.com/nilesh.nayal"><i class="fa fa-facebook"></i></a>&nbsp;&nbsp;&nbsp;
             <a href="#"><i class="fa fa-google"></i></a>&nbsp;&nbsp;&nbsp;
           </span></p>
         <p>&copy; Nilesh Singh Nayal &middot; </p>
